Complete loot, advancement, and enchantment runtime hooks